--- a/Music_metadataextract.ipynb
+++ b/Music_metadataextract.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqGUW4GuQnBusEBJ0kaZoP",
+      "authorship_tag": "ABX9TyM28GqaN4ttAuCDTk9w9DAU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,8 +119,8 @@
         "from spotipy.oauth2 import SpotifyClientCredentials\n",
         "\n",
         "# Set up Spotify client\n",
-        "client_id = '12d2c85e6b5447138a90b7007f85e483'#your_spotify_client_id'\n",
-        "client_secret = '0e1dc5136bf7416e98f03d716086ad56'#your_spotify_client_secret\n",
+        "client_id = ''#your_spotify_client_id'\n",
+        "client_secret = ''#your_spotify_client_secret\n",
         "client_credentials_manager = SpotifyClientCredentials(client_id=client_id, client_secret=client_secret)\n",
         "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)\n",
         "\n",
@@ -143,7 +143,7 @@
       "cell_type": "code",
       "source": [
         "# Get audio features for a track\n",
-        "track_id = '5PvwPy5eRO8BPwpRzCHK3D'#spotify_track_id\n",
+        "track_id = ''#spotify_track_id\n",
         "features = sp.audio_features([track_id])\n",
         "print(features)"
       ],
@@ -181,8 +181,8 @@
         "import base64\n",
         "\n",
         "# Your Genius API credentials\n",
-        "client_id = 'BkKdJsCu2q-aUR8KezowIHBk_9PwMHN1b63iWJA8jyJBzN-ZWIA381u5Dkh5Qh-6'\n",
-        "client_secret = 'Qc0cdeH645-rvE7pfQzShB7RPVgbkicZFIReRGynUc6Gc3IK5iwSm3ByggZKgSy13iMY6pvukG1vwuwGPBpxLQ'\n",
+        "client_id = ''\n",
+        "client_secret = ''\n",
         "\n",
         "# Obtain an access token\n",
         "auth_url = 'https://api.genius.com/oauth/token'\n",
